BUG FIXES:

ENHANCEMENTS:
org.dcm4che.net.Association:
+ add properties rqTimeout, acTimeout, dimseTimeout
org.dcm4che.server.DcmHandler:
+ add properties rqTimeout, dimseTimeout, soCloseDelay
DcmSnd, MppsSnd:
+ add options --ac-timeout, --dimse-timeout, --so-close-delay
DcmRcv:
+ add options --max-clients, --rq-timeout, --dimse-timeout, --so-close-delay

CHANGES:
org.dcm4che.net.Association:
+ rename property TCPCloseTimeout to soCloseDelay
+ remove timeout param from connect(), accept(), read()
 
-------------------------------------------------------------------------------
dcm4che 1.0.3 -  - Changes since dcm4che 1.0.2
-------------------------------------------------------------------------------
BUG FIXES:
org.dcm4cheri.data
+ Fix DcmStreamHandlerImpl#fragment (=> error writing encapsed pixel data)
+ Fix value of Command#C_CANCEL_RQ
+ Fix DcmElement#addItem for SQ Elements (UnsupportedOperationException)
org.dcm4cheri.srom
+ Fix KeyObjectImpl#sopInstanceRefListToSQ (ClassCastException srom->Dataset)
+ Fix RefSOPImpl#toDataset (SOPInstanceUID <-> SOPClassUID)
samples:
+ Fix build.xml to include missing .class into imgread.jar & imgdisp.jar
+ DcmRcv: Fix write to file - wasn't MT safe

ENHANCEMENTS:
dcm4che API:
+ add org.dcm4che.data.DcmObject#getDateRange
+ add org.dcm4che.data.DcmObject#getDateTimeRange
+ add org.dcm4che.data.DcmObject#setPrivateCreatorID (access private attributs)
+ add org.dcm4che.data.DcmObject#getPrivateCreatorID
+ org.dcm4che.data.DcmObject#put??(tag, value) except value=null 
+ add org.dcm4che.data.Tags#valueOf(short,short)
+ add org.dcm4che.data.DcmElement#getDateRange
+ add org.dcm4che.media.DirBuilder#getDirWriter
+ add org.dcm4che.net.FutureRSP#listPending
+ add org.dcm4che.net.DcmServiceBase.MultiDimseRsp#release
+ add org.dcm4che.net.DcmServiceBase#doAfterRsp
+ add org.dcm4che.net.Association#getAAssociateRQ
+ add org.dcm4che.net.Association#getAAssociateAC
+ add org.dcm4che.net.Association#getAAssociateRJ